Creation of change language component. close #7

--- a/public/assets/i18n/es.json
+++ b/public/assets/i18n/es.json
@@ -31,7 +31,7 @@
   },
   "userSection": {
     "signUp": "Registrarse",
-    "changeLanguage": "Cambiar idioma",
+    "changeLanguage": "Cambiar de idioma",
     "selectLanguage": "Selecciona el idioma",
     "change": "Cambiar",
     "languages": "Idiomas",
