Implemented basic dataset info page

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -69,8 +69,12 @@
     "dataset_name_required_error": "Name is",
     "author_name": "Author name",
     "author_name_placeholder": "Author name",
-    "author_name_hint": "How do you want to appear as author of this dataset?",
+    "author_name_hint": "Who is the author of this dataset?",
     "author_name_required_error": "Author is",
+    "maintainer_name": "Maintainer name",
+    "maintainer_name_placeholder": "Maintainer name",
+    "maintainer_name_hint": "How do you want to appear as maintainer of this dataset?",
+    "maintainer_name_required_error": "Author is",
     "dataset_description": "Dataset description",
     "dataset_description_hint": "Write a short description to inform other users about this dataset",
     "dataset_description_required_error": "A description is required",
