--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -106,9 +106,21 @@
     "dataset_information_description": "Description",
     "dataset_information_original_author": "Original author",
     "dataset_information_creation_date": "Creation date",
+    "repositories_title": "Instances"
+  },
+  "instancesTable": {
     "repositories_title": "Instances",
     "name_column_header": "Name",
     "maintainer_column_header": "Maintainer",
     "add_new_dataset_button": "Add a new repository"
+  },
+  "repositoryInfo": {
+    "description": "Description",
+    "maintained_by_multiple_authors": "Maintained by Multiple authors on",
+    "maintained_by_single_author": "Maintained by",
+    "dataset_information_title": "Dataset Information",
+    "dataset_information_description": "Description",
+    "dataset_information_original_author": "Original author",
+    "dataset_information_creation_date": "Creation date"
   }
 }
