--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -91,7 +91,7 @@
     "search_placeholder": "Search by name, description, author...",
     "name_column_header": "Name",
     "description_column_header": "Description",
-    "author_column_header": "Author",
+    "author_column_header": "Registered by",
     "registration_date_column_header": "Registration date",
     "name_sort_description": "Sort by name",
     "description_sort_description": "Sort by Description",
@@ -180,7 +180,9 @@
     "validate_more_button_text": "Validate more indicators"
   },
   "generic-table": {
-    "search_placeholder": "Search by any column value",
+    "search_placeholder": "Search by any column value"
+  },
+  "rescue": {
     "name": "Name",
     "description": "Description",
     "registrationDate": "Registration date"
