Postprocess category column

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -185,6 +185,7 @@
   "rescue": {
     "name": "Name",
     "description": "Description",
-    "registrationDate": "Registration date"
+    "registrationDate": "Registration date",
+    "category": "Category"
   }
 }
