--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -11,7 +11,11 @@
     "email": "E-Mail",
     "usernameRequired": "Username is",
     "emailRequired": "E-mail is",
+    "currentPassword": "Current password",
+    "changeMyPassword": "Change my password",
     "wrong": "wrong",
+    "change": "Change my settings",
+    "required": "required",
     "eMailFormat": "E-mail format",
     "password": "Password",
     "wrongFormat": "wrong format",
