--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -7,6 +7,7 @@
   },
   "register": {
     "signUp": "Sign up",
+    "settings": "User settings",
     "username": "Username",
     "email": "E-Mail",
     "usernameRequired": "Username is",
