--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -88,7 +88,7 @@
     "creation_date_required_error": "Creation date is",
     "repository_details": "Repository details",
     "doi": "DOI",
-    "format": "For example,",
+    "format": "For example",
     "doi_required_error": "DOI is",
     "doi_pattern_error": "This doesn't seem to be a DOI format"
   },
