Improve style of buttons in validation process

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -202,7 +202,7 @@
     "negative_comment_intro": "Kindly provide a comment (optional) to explaining your decision. This comment will be public and will help the maintainer of this instance to understand why the indicator is missing.",
     "leave_comment_label": "Leave a comment",
     "leave_comment_placeholder": "Comment",
-    "validate_button_text": "Validate",
+    "validate_button_text": "VALIDATE!!",
     "results_label": "Results",
     "thanks_card_title": "Thanks",
     "submitted_validation_text": "You have submitted your validation.",
