Change button styles

--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -85,7 +85,7 @@
     "intro_paragraph_2_fair_principles": "FAIR principles",
     "intro_paragraph_2": "help us understand how to publish a dataset so that it is findable, accessible, interoperable, and reusable. Additionally, they will help us preserve it and prevent its destruction.",
     "intro_paragraph_3": "This assistant will help you register your dataset and take its first steps towards excellence.",
-    "intro_paragraph_4": "So...  Are you ready?",
+    "intro_paragraph_4": "So...  Let's go!",
     "dataset": "Dataset",
     "repository": "Repository",
     "create_button": "Create dataset",
