--- a/public/assets/i18n/en.json
+++ b/public/assets/i18n/en.json
@@ -317,5 +317,23 @@
     "category": "Category",
     "deleted": "The FAIR principle has been removed.",
     "saved": "The FAIR principle has been saved."
+  },
+  "welcome_user": {
+    "title": "Welcome back! What do you want to do?",
+    "search_label": "Enter your search query",
+    "search_button": "Search",
+    "dashboard_title": "Dashboard",
+    "dataset_count": "You are managing {{count}} datasets.",
+    "go_to_dashboard": "Go to Dashboard",
+    "contribute_title": "Contribute",
+    "contribute_description": "You can contribute in many ways",
+    "verify_link": "Help to verify FAIR Indicators on other datasets",
+    "rescue_link": "Rescue an abandoned dataset",
+    "raise_link": "Raise a new dataset",
+    "ranking_title": "Ranking",
+    "points": "You have {{points}} points, do you want to check some statistics?",
+    "ranking_points": "Ranking of users by number of points",
+    "ranking_datasets": "Ranking of users by number of Datasets raised",
+    "ranking_validations": "Ranking of users by number of Validations"
   }
 }
